build/log/idf_py_stdout_output_56852
[1/11] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D D:\2.upwork\91.Beer\esp32_beer\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.2_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.2.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 D:/2.upwork/91.Beer/esp32_beer/build/bootloader/bootloader.bin"
Bootloader binary size 0x5250 bytes. 0x2db0 bytes (36%) free.
[2/9] Building C object esp-idf/lvgl_esp32_drivers/CMakeFiles/__idf_lvgl_esp32_drivers.dir/lvgl_tft/esp_lcd_backlight.c.obj
FAILED: esp-idf/lvgl_esp32_drivers/CMakeFiles/__idf_lvgl_esp32_drivers.dir/lvgl_tft/esp_lcd_backlight.c.obj 
ccache C:\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20230928\xtensa-esp-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.2.1-dirty\" -DLV_CONF_INCLUDE_SIMPLE -DLV_LVGL_H_INCLUDE_SIMPLE -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/2.upwork/91.Beer/esp32_beer/build/config -ID:/2.upwork/91.Beer/esp32_beer/components/lvgl_esp32_drivers -ID:/2.upwork/91.Beer/esp32_beer/components/lvgl_esp32_drivers/lvgl_tft -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/config/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/config/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/config/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/esp_hw_support/include/soc/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/esp_hw_support/port/esp32s3/. -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/soc/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/soc/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/hal/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/esp_rom/include/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/esp_rom/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/xtensa/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/xtensa/deprecated_include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/port/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/port/freertos/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/port/esp32xx/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/port/esp32xx/include/arch -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/port/esp32xx/include/sys -ID:/2.upwork/91.Beer/esp32_beer/components/lvgl -ID:/2.upwork/91.Beer/esp32_beer/components/lvgl/src -ID:/2.upwork/91.Beer/esp32_beer/components -ID:/2.upwork/91.Beer/esp32_beer/components/lvgl/examples -ID:/2.upwork/91.Beer/esp32_beer/components/lvgl/demos -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/esp_timer/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/deprecated -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/analog_comparator/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/dac/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/gpio/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/gptimer/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/i2c/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/i2s/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/ledc/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/mcpwm/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/parlio/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/pcnt/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/rmt/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/sdio_slave/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/sdmmc/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/sigma_delta/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/spi/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/temperature_sensor/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/touch_sensor/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/twai/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/uart/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/usb_serial_jtag/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/driver/touch_sensor/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/esp_pm/include -IC:/Espressif/frameworks/esp-idf-v5.2.1/components/esp_ringbuf/include -mlongcalls  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=D:/2.upwork/91.Beer/esp32_beer=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.2.1=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/lvgl_esp32_drivers/CMakeFiles/__idf_lvgl_esp32_drivers.dir/lvgl_tft/esp_lcd_backlight.c.obj -MF esp-idf\lvgl_esp32_drivers\CMakeFiles\__idf_lvgl_esp32_drivers.dir\lvgl_tft\esp_lcd_backlight.c.obj.d -o esp-idf/lvgl_esp32_drivers/CMakeFiles/__idf_lvgl_esp32_drivers.dir/lvgl_tft/esp_lcd_backlight.c.obj -c D:/2.upwork/91.Beer/esp32_beer/components/lvgl_esp32_drivers/lvgl_tft/esp_lcd_backlight.c
D:/2.upwork/91.Beer/esp32_beer/components/lvgl_esp32_drivers/lvgl_tft/esp_lcd_backlight.c: In function 'disp_backlight_new':
D:/2.upwork/91.Beer/esp32_beer/components/lvgl_esp32_drivers/lvgl_tft/esp_lcd_backlight.c:67:9: error: implicit declaration of function 'gpio_matrix_out'; did you mean 'gpio_iomux_out'? [-Werror=implicit-function-declaration]
   67 |         gpio_matrix_out(config->gpio_num, SIG_GPIO_OUT_IDX, config->output_invert, false);
      |         ^~~~~~~~~~~~~~~
      |         gpio_iomux_out
D:/2.upwork/91.Beer/esp32_beer/components/lvgl_esp32_drivers/lvgl_tft/esp_lcd_backlight.c:67:43: error: 'SIG_GPIO_OUT_IDX' undeclared (first use in this function)
   67 |         gpio_matrix_out(config->gpio_num, SIG_GPIO_OUT_IDX, config->output_invert, false);
      |                                           ^~~~~~~~~~~~~~~~
D:/2.upwork/91.Beer/esp32_beer/components/lvgl_esp32_drivers/lvgl_tft/esp_lcd_backlight.c:67:43: note: each undeclared identifier is reported only once for each function it appears in
cc1.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
